--- a/aula_04.ipynb
+++ b/aula_04.ipynb
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -60,7 +60,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -104,7 +104,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -152,16 +152,11 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "C++14",
-      "language": "C++14",
-      "name": "xcpp14"
+      "display_name": "Python 3",
+      "name": "python3"
     },
     "language_info": {
-      "codemirror_mode": "text/x-c++src",
-      "file_extension": ".cpp",
-      "mimetype": "text/x-c++src",
-      "name": "c++",
-      "version": "14"
+      "name": "python"
     },
     "colab": {
       "name": "aula-04.ipynb",
