--- a/aula_04.ipynb
+++ b/aula_04.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/aforechi/ifes-alg-2022-1/blob/main/aula_04a.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "uLd9RyIg2HbY"
       },
       "source": [
@@ -15,13 +25,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "8XsjF3qh2Hbb",
-        "outputId": "84949483-0300-4ab7-817e-233fd1b81e6f"
+        "outputId": "7864615e-339b-4b89-f6bb-8c3bdbb3ec5c"
       },
       "outputs": [
         {
@@ -32,7 +42,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 1
         }
       ],
       "source": [
@@ -50,13 +60,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "C-Toi4bD2Hbe",
-        "outputId": "a03f0647-4660-4697-8431-ae16b26bf458"
+        "outputId": "064a5aa9-ec6a-4f83-c648-baf88d7248d9"
       },
       "outputs": [
         {
@@ -67,7 +77,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 2
         }
       ],
       "source": [
@@ -94,13 +104,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "d-_lbhzP2HcF",
-        "outputId": "a567db8d-aeab-4422-8157-9687a58dd85d"
+        "outputId": "a98d1a0e-2eb1-468b-de48-a9a9bbf03ada"
       },
       "outputs": [
         {
@@ -111,7 +121,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 3
         }
       ],
       "source": [
@@ -149,9 +159,10 @@
       "name": "python"
     },
     "colab": {
-      "name": "aula-04.ipynb",
+      "name": "aula-04a.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
