--- a/aula-02.ipynb
+++ b/aula-02.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/aforechi/ifes-alg-2022-1/blob/main/aula-02.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -70,18 +70,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "import math"
-      ],
-      "metadata": {
-        "id": "Fe4mhhqp8t5a"
-      },
       "execution_count": 4,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -92,17 +81,14 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "' \\n Cálculo das raízes reais de uma equação do segundo grau \\n Descrição: programa que calcula as raízes reais de uma equação do segundo grau.\\n Dados de entrada: os coeficientes a, b e c de uma equação da forma ax^2 + bx + c = 0\\n Saída do programa: raízes reais da equação\\n'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
+            ]
           },
+          "execution_count": 4,
           "metadata": {},
-          "execution_count": 1
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -116,7 +102,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 5,
       "metadata": {
         "id": "DjUmwPj26jGd"
       },
@@ -130,7 +116,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 6,
       "metadata": {
         "id": "r2zaCQ0y6jGe"
       },
@@ -142,106 +128,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 7,
       "metadata": {
         "id": "j0gWqVBZ6jGe"
       },
       "outputs": [],
       "source": [
         "# Cálculo da primeira raiz\n",
-        "x1 = (-b + math.sqrt(delta)) / (2.0*a)"
+        "x1 = (-b + delta**(1/2)) / (2.0*a)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 8,
       "metadata": {
         "id": "qftklrKO6jGf"
       },
       "outputs": [],
       "source": [
         "# Cálculo da segunda raiz\n",
-        "x2 = (-b - math.sqrt(delta)) / (2.0*a)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "tpydpHvd6jGf"
-      },
-      "source": [
-        "## Instruções de entrada de dados\n",
-        "\n",
-        "Exercício 1: Escreva um programa Python para o usuário informar os valores para os coeficientes \"a\", \"b\" e \"c\" sem precisar modificar o programa."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 12,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "XLs-AuxL6jGg",
-        "outputId": "f74217ae-c80e-4c3f-f4ca-6483a75b09c4"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "10\n"
-          ]
-        }
-      ],
-      "source": [
-        "a = int(input())"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 13,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "KADjCuR76jGh",
-        "outputId": "bf64c11f-c548-41d3-fc30-aa568a75da42"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "5\n"
-          ]
-        }
-      ],
-      "source": [
-        "b = int(input())"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 14,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "6XBua5Ht6jGh",
-        "outputId": "5e4d83d9-ae2c-449a-8a9f-d6ad86c98d8d"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "0\n"
-          ]
-        }
-      ],
-      "source": [
-        "c = int(input())"
+        "x2 = (-b - delta**(1/2)) / (2.0*a)"
       ]
     },
     {
@@ -258,7 +164,13 @@
         "- float: Número em ponto flutuante de precisão simples. São conhecidos normalmente como números reais\n",
         "- complex: Números complexos com parte real e imaginária.\n",
         "- bool: Lógico. O valor armazenado é verdadeiro (True) ou falso (False)\n",
-        "- str: Caracteres na forma de palavras, letras, simbolos, etc\n",
+        "- str: Caracteres na forma de palavras, letras, simbolos, etc\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "\n",
         "## Operadores aritméticos\n",
         "| Operador | Descrição |\n",
@@ -305,14 +217,14 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "11.0"
             ]
           },
+          "execution_count": 18,
           "metadata": {},
-          "execution_count": 18
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -340,14 +252,14 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "12.0"
             ]
           },
+          "execution_count": 19,
           "metadata": {},
-          "execution_count": 19
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -377,8 +289,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Olá, mundo!\n",
             "Esta citação possui aspas simples (') e duplas (\").\n"
@@ -426,8 +338,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Instituto Federal do Espirito Santo\n",
             "\n",
@@ -452,6 +364,43 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Exercícios resolvidos\n",
+        "Encontre as raízes complexas da equação x² – 14x + 50 = 0"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "x'= (-7+1j)\n",
+            "x''= (-7-1j)\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Dicionário de dados\n",
+        "a = 1 # Coeficiente angular\n",
+        "b = 14  # Coeficiente linear\n",
+        "c = 50  # Termo independente\n",
+        "# Cálculo do discriminante (delta)\n",
+        "delta = b * b - 4 * a * c\n",
+        "# Cálculo da primeira raiz\n",
+        "x1 = (-b + delta**(1/2)) / (2.0*a)\n",
+        "# Cálculo da segunda raiz\n",
+        "x2 = (-b - delta**(1/2)) / (2.0*a)\n",
+        "print(\"x'=\", x1)\n",
+        "print(\"x''=\", x2)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "Ni-ApHbL6jGo"
       },
@@ -471,23 +420,30 @@
         "id": "K8BixD9y6jGp"
       },
       "outputs": [],
-      "source": [
-        ""
-      ]
+      "source": []
     }
   ],
   "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "name": "aula-02.ipynb",
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
-    },
-    "colab": {
-      "name": "aula-02.ipynb",
-      "provenance": [],
-      "include_colab_link": true
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.10"
     }
   },
   "nbformat": 4,
