--- a/aula-03.ipynb
+++ b/aula-03.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/aforechi/ifes-alg-2022-1/blob/main/aula-03.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -112,15 +112,41 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tpydpHvd6jGf"
+      },
+      "source": [
+        "## Instruções de entrada de dados\n",
+        "\n",
+        "Exercício 1: Escreva um programa Python para o usuário informar os valores para os coeficientes \"a\", \"b\" e \"c\" sem precisar modificar o programa."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XLs-AuxL6jGg",
+        "outputId": "f74217ae-c80e-4c3f-f4ca-6483a75b09c4"
+      },
+      "outputs": [],
+      "source": [
+        "a = input(\"Informe o coeficiente angular\")\n",
+        "b = input(\"Informe o coeficiente linear\")\n",
+        "c = input(\"Informe o termo independente\")"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 3,
       "metadata": {
         "id": "GLcRc0GnFUVQ"
       },
       "outputs": [],
-      "source": [
-        "a = int('10') "
-      ]
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -176,9 +202,7 @@
         "id": "M4Hrvkm2FUV0"
       },
       "outputs": [],
-      "source": [
-        ""
-      ]
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -201,8 +225,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Média :  27.666666666666668\n"
           ]
@@ -237,436 +261,20 @@
         "- Criar um algoritmo que dado um número inteiro, imprima seu sucessor e seu antecessor.\n",
         "- Criar um algoritmo que dado dois números inteiros, imprima o primeiro como dividendo, o segundo como divisor, e o quociente e o resto da operação."
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "YxUhYv3kFUV4"
-      },
-      "outputs": [],
-      "source": [
-        "auto soma = 3 + 4;"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "lJM6pAXYFUV4"
-      },
-      "outputs": [],
-      "source": [
-        "auto soma_real = 3.0 + 4.0;"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "k9o6qRZ7FUV5",
-        "outputId": "5d67182f-8488-4bf4-e0d4-9e2a0ff64092"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "7.0000000"
-            ]
-          },
-          "execution_count": 6,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "soma_real"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "HHoAAwGkFUV7",
-        "outputId": "f718d528-2f85-492d-9b22-f653102cf667"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "7"
-            ]
-          },
-          "execution_count": 7,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "soma"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "6C2yNEeqFUV7"
-      },
-      "outputs": [],
-      "source": [
-        "auto caracter = 'A';"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "wUq9UPcBFUV8",
-        "outputId": "5d5ed204-ec17-4ccd-beb2-188dbd1012d6"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "'A'"
-            ]
-          },
-          "execution_count": 9,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "caracter"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "zMGO2wwTFUV9"
-      },
-      "outputs": [],
-      "source": [
-        "bool esta_chovendo = false;"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "PUx7g1v1FUV9",
-        "outputId": "c3606eeb-f0dc-4e7e-8c3e-a29661a934bb"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "false"
-            ]
-          },
-          "execution_count": 11,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "esta_chovendo"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "7p-KNBJkFUV_"
-      },
-      "outputs": [],
-      "source": [
-        "auto esta_dando_sol = true;"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "lzAwF7hRFUWA",
-        "outputId": "3096ab6f-b6ec-4646-d226-6fafbf641f47"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "true"
-            ]
-          },
-          "execution_count": 13,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "esta_dando_sol"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "eus-TNxrFUWC"
-      },
-      "outputs": [],
-      "source": [
-        "esta_dando_sol = 0.0;"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "LMIKvFpKFUWD",
-        "outputId": "69e2583e-97e5-4932-9d70-4e0065ccbfec"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "false"
-            ]
-          },
-          "execution_count": 17,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "esta_dando_sol"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "oDw_YLcFFUWE"
-      },
-      "outputs": [],
-      "source": [
-        "bool noite = false;"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "WCOUimf_FUWF"
-      },
-      "outputs": [],
-      "source": [
-        "noite = 19;"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "8GqRFP8eFUWF",
-        "outputId": "65240c96-a086-47be-a61d-2bf22aa48094"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "true"
-            ]
-          },
-          "execution_count": 21,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "noite"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "MJXEvdVyFUWG"
-      },
-      "outputs": [],
-      "source": [
-        "auto hora_atual = 10;"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "-gadimrLFUWG"
-      },
-      "outputs": [],
-      "source": [
-        "noite = hora_atual >= 18;"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "WSbpiTe1FUWH",
-        "outputId": "e2809053-a7af-4509-a97e-9950fb04562a"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "true"
-            ]
-          },
-          "execution_count": 34,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "noite"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "nOAawf-lFUWI"
-      },
-      "outputs": [],
-      "source": [
-        "hora_atual = 18;"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "LlZ0IZF4FUWJ",
-        "outputId": "b0662ec9-6d5a-4387-80cd-73e24543ba22"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "7"
-            ]
-          },
-          "execution_count": 35,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "3+4"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "GuNLsAwyFUWJ",
-        "outputId": "9608c143-4f2c-4435-a34c-0821367f3233"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "false"
-            ]
-          },
-          "execution_count": 38,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "true && false // e lógico"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "2DsdMbb3FUWK",
-        "outputId": "74e8f345-ab73-48d0-b8d4-6f8eef77145d"
-      },
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "false"
-            ]
-          },
-          "execution_count": 39,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "false || false // ou lógico"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "AFhJgaGZFUWL"
-      },
-      "outputs": [],
-      "source": [
-        "#include <iostream>"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "C7kgFqpsFUWL",
-        "outputId": "00adc6a4-fc70-4a48-88a3-79fc4626a51a"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "1"
-          ]
-        }
-      ],
-      "source": [
-        "std::cout << (true);"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "F65M4RcOFUWM"
-      },
-      "outputs": [],
-      "source": [
-        ""
-      ]
     }
   ],
   "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "name": "aula-03.ipynb",
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "name": "python3"
     },
     "language_info": {
       "name": "python"
-    },
-    "colab": {
-      "name": "aula-03.ipynb",
-      "provenance": [],
-      "include_colab_link": true
     }
   },
   "nbformat": 4,
