--- a/aula-04.ipynb
+++ b/aula-04.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/aforechi/ifes-alg-2022-1/blob/main/aula_04a.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -35,18 +35,18 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "100.0"
             ]
           },
+          "execution_count": 1,
           "metadata": {},
-          "execution_count": 1
+          "output_type": "execute_result"
         }
       ],
       "source": [
-        "1000.0*0.1"
+        "0.1*1000.0"
       ]
     },
     {
@@ -60,37 +60,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "C-Toi4bD2Hbe",
-        "outputId": "064a5aa9-ec6a-4f83-c648-baf88d7248d9"
-      },
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "soma = [0.1]*1000"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "soma = sum(soma)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {},
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "99.9999999999986"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 2
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "99.9999999999986\n"
+          ]
         }
       ],
       "source": [
-        "soma = 0.0\n",
-        "\n",
-        "i=1\n",
-        "\n",
-        "while(i <= 1000):\n",
-        "    soma=soma+0.1\n",
-        "    i=i+1\n",
-        "\n",
-        "\n",
-        "soma"
+        "print(soma)"
       ]
     },
     {
@@ -114,14 +114,14 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "99.9999"
             ]
           },
+          "execution_count": 3,
           "metadata": {},
-          "execution_count": 3
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -135,7 +135,20 @@
       },
       "source": [
         "# Exercícios propostos\n",
-        "- Digite numero inteiro de tres digitos e encontre o algarismo das dezenas usando os operadores divisão e resto.\n"
+        "- Exercício 1: Digite numero inteiro de tres digitos e encontre o algarismo das dezenas usando os operadores divisão e resto.\n",
+        "\n",
+        "## Algoritmo\n",
+        "    Passo 1: Crie uma variável que armazene numero inteiro qualquer com três digitos.\n",
+        "    Passo 2: Escreva uma expressão matemática para descobrir o algarismo das dezenas usando apenas os operadores divisão (/) e resto (%) \n",
+        "    Passo 3: Imprima na tela o algarismo das dezenas. \n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "\n",
+        "- Exercício 2: Converta o algarismo das dezenas da base decimal para binário usando apenas os operadores algebricos da linguagem."
       ]
     },
     {
@@ -145,24 +158,31 @@
         "id": "PMiNuW052HcI"
       },
       "outputs": [],
-      "source": [
-        ""
-      ]
+      "source": []
     }
   ],
   "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "include_colab_link": true,
+      "name": "aula-04a.ipynb",
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
-    },
-    "colab": {
-      "name": "aula-04a.ipynb",
-      "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.10"
     }
   },
   "nbformat": 4,
