--- a/aula-05-1.ipynb
+++ b/aula-05-1.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/aforechi/ifes-alg-2022-1/blob/main/aula-05-1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -339,20 +339,18 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "P = True"
-      ],
+      "execution_count": 19,
       "metadata": {
         "id": "YM6Q4ENMBNmF"
       },
-      "execution_count": 19,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "P = True"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "not P"
-      ],
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -360,18 +358,20 @@
         "id": "WhAzrKG1BYBQ",
         "outputId": "e85d2e14-0fd8-46cc-ba34-8a5696f9233b"
       },
-      "execution_count": 20,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "False"
             ]
           },
+          "execution_count": 20,
           "metadata": {},
-          "execution_count": 20
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "not P"
       ]
     },
     {
@@ -428,21 +428,19 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "A = True\n",
-        "B = True"
-      ],
+      "execution_count": 21,
       "metadata": {
         "id": "LTbyFt_nCkhq"
       },
-      "execution_count": 21,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "A = True\n",
+        "B = True"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "A and B"
-      ],
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -450,18 +448,20 @@
         "id": "wthHhZcNC8RX",
         "outputId": "017cac2d-7d6d-4956-e756-3aa7581453ab"
       },
-      "execution_count": 22,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "True"
             ]
           },
+          "execution_count": 22,
           "metadata": {},
-          "execution_count": 22
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "A and B"
       ]
     },
     {
@@ -485,21 +485,19 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "A = True\n",
-        "B = True"
-      ],
+      "execution_count": 23,
       "metadata": {
         "id": "YheQ4eiPC7Lh"
       },
-      "execution_count": 23,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "A = True\n",
+        "B = True"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "A or B"
-      ],
+      "execution_count": 24,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -507,18 +505,20 @@
         "id": "MJFbgA3PDT9-",
         "outputId": "25fd093d-858e-40a3-9697-f68a3f6515f6"
       },
-      "execution_count": 24,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "True"
             ]
           },
+          "execution_count": 24,
           "metadata": {},
-          "execution_count": 24
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "A or B"
       ]
     },
     {
@@ -542,21 +542,19 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "A = True\n",
-        "B = True"
-      ],
+      "execution_count": 25,
       "metadata": {
         "id": "RfJ-z_tjEGiP"
       },
-      "execution_count": 25,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "A = True\n",
+        "B = True"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "A != B"
-      ],
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -564,18 +562,20 @@
         "id": "Uf2PcIRUEK3F",
         "outputId": "9223e895-0cea-4378-d9a5-028cd716300e"
       },
-      "execution_count": 26,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "False"
             ]
           },
+          "execution_count": 26,
           "metadata": {},
-          "execution_count": 26
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "A != B"
       ]
     },
     {
@@ -608,11 +608,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "A = True\n",
-        "B = True\n",
-        "C = True"
-      ],
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -620,25 +616,27 @@
         "id": "Zx6eVb3pEwL9",
         "outputId": "668b8b3d-a9b1-46bf-bd7b-8b847ba7ee08"
       },
-      "execution_count": 16,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "False"
             ]
           },
+          "execution_count": 16,
           "metadata": {},
-          "execution_count": 16
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "A = True\n",
+        "B = True\n",
+        "C = True"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "(A or B) and not C"
-      ],
+      "execution_count": 27,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -646,18 +644,20 @@
         "id": "3dwi1iqoHy_B",
         "outputId": "88ad1a5e-93bd-4b90-e9c5-02e8f2079d50"
       },
-      "execution_count": 27,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "False"
             ]
           },
+          "execution_count": 27,
           "metadata": {},
-          "execution_count": 27
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "(A or B) and not C"
       ]
     },
     {
@@ -707,12 +707,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "A = True\n",
-        "B = False\n",
-        "A_implica_B = not A or B\n",
-        "print(A_implica_B)"
-      ],
+      "execution_count": 30,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -720,15 +715,20 @@
         "id": "c4Ccury1HEeM",
         "outputId": "e4c82665-1163-4da7-e6f2-df4fd1b03258"
       },
-      "execution_count": 30,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "False\n"
           ]
         }
+      ],
+      "source": [
+        "A = True\n",
+        "B = False\n",
+        "A_implica_B = not A or B\n",
+        "print(A_implica_B)"
       ]
     },
     {
@@ -785,14 +785,12 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "uEMmjOOvIJx1"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -817,14 +815,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "A = True\n",
-        "B = True\n",
-        "\n",
-        "A_implica_B = not A or B\n",
-        "B_implica_A = not B or A\n",
-        "A_implica_B and B_implica_A"
-      ],
+      "execution_count": 29,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -832,18 +823,25 @@
         "id": "AGglzSnlIfKy",
         "outputId": "8068a169-e16d-4cbb-d012-666eedaf73a6"
       },
-      "execution_count": 29,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "True"
             ]
           },
+          "execution_count": 29,
           "metadata": {},
-          "execution_count": 29
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "A = True\n",
+        "B = True\n",
+        "\n",
+        "A_implica_B = not A or B\n",
+        "B_implica_A = not B or A\n",
+        "A_implica_B and B_implica_A"
       ]
     },
     {
@@ -875,6 +873,23 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 31,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FPOqOxPCJUSV",
+        "outputId": "51104a10-6951-483e-9aaf-00a45afc1e55"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "True\n"
+          ]
+        }
+      ],
       "source": [
         "A = True\n",
         "B = True\n",
@@ -884,23 +899,6 @@
         "\n",
         "A_se_e_somente_se_B = A_implica_B and B_implica_A\n",
         "print(A_se_e_somente_se_B)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "FPOqOxPCJUSV",
-        "outputId": "51104a10-6951-483e-9aaf-00a45afc1e55"
-      },
-      "execution_count": 31,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "True\n"
-          ]
-        }
       ]
     },
     {
@@ -912,9 +910,10 @@
         "## Precedência dos Operadores Lógicos\n",
         "- Para construir uma tabela-verdade, será necessário resolver todas as possíveis combinações de valores lógicos das proposições existentes;\n",
         "- A resolução de um sistema formal deve seguir uma ordem, assim como acontece nas equações matemáticas:\n",
-        "<p>1. ()\n",
-        "<p>2. not\n",
-        "<p>3. or/and\n"
+        "1. ()\n",
+        "2. not\n",
+        "3. and\n",
+        "4. or"
       ]
     },
     {
@@ -932,6 +931,9 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "QZ8ibf4-K5Po"
+      },
       "source": [
         "## <center> Operadores lógicos em Python </center>\n",
         "\n",
@@ -969,10 +971,7 @@
         "  </tr>\n",
         "</tbody>\n",
         "</table>"
-      ],
-      "metadata": {
-        "id": "QZ8ibf4-K5Po"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1019,24 +1018,22 @@
         "id": "xctRUPGS0bEA"
       },
       "outputs": [],
-      "source": [
-        ""
-      ]
+      "source": []
     }
   ],
   "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "include_colab_link": true,
+      "name": "aula-05.1.ipynb",
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3",
       "name": "python3"
     },
     "language_info": {
       "name": "python"
-    },
-    "colab": {
-      "name": "aula-05.1.ipynb",
-      "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
     }
   },
   "nbformat": 4,
