--- a/aula-05-2.ipynb
+++ b/aula-05-2.ipynb
@@ -385,7 +385,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Faça o Exercício 1001 do URI, disponível em https://www.urionlinejudge.com.br/judge/pt/problems/view/1001"
+        "Faça o Exercício 1001 do URI, disponível em https://www.beecrowd.com.br/judge/pt/problems/view/1001"
       ],
       "metadata": {
         "id": "e5DVOQqHOGSk"
